# usbot1

./: .env.example  .gitignore  README.md  jest.config.js  jest.setup.js  jest.setup.ts  next.config.js  package-lock.json  package.json  pyproject.toml  requirements.txt  server.ts  vercel.json
__tests__/: audio-playback.test.tsx  basic-flow.test.tsx  chat-interface.test.tsx  chat.test.tsx  page.test.tsx  voice-recognition.test.tsx
__tests__/utils/: test-utils.tsx
api/: main.py
api/config/: settings.py
app/: globals.css  layout.tsx  page.tsx
components/: error-boundary.tsx
components/audio/: audio-player.tsx  audio-recorder.tsx
components/chat/: chat-form.tsx  chat-interface.tsx
components/decorative/: hanging-elements.tsx  shooting-star.tsx  star-burst.tsx
components/layout/: profile-section.tsx  stage-section.tsx
components/settings/: language-selector.tsx  voice-selector.tsx
components/ui/: button.tsx  error-boundary.tsx  error-toast.tsx  input.tsx  loading-spinner.tsx  loading-state.tsx
lib/: openai-config.ts
lib/hooks/: use-chat.ts  use-websocket-client.ts
lib/services/: api-service.ts  event-stream-manager.ts  websocket-manager.ts  websocket-service.ts
lib/store/: chat-store.ts
lib/utils/: cache-manager.ts  logger.ts  message-queue.ts  parallel-processor.ts  pipeline-manager.ts  request-helpers.ts  retry-handler.ts  retry.ts  stream-helpers.ts
lib/validation/: api-schemas.ts
scripts/: check-env.ts
server/config/: env.ts
server/middleware/: auth.ts  rate-limit.ts
server/services/: cache-service.ts
types/: env.d.ts
(+22 files in other folders)
