[tool.poetry]
name = "usbot1"
version = "0.1.0"
description = "Chat bot with speech and translation capabilities"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
python-dotenv = "^1.0.0"
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"
openai = "^1.6.1"
python-multipart = "^0.0.6"
redis = "^5.0.1"
websockets = "^12.0"
httpx = "^0.26.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.4"
black = "^23.12.1"
isort = "^5.13.2"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 